syntax = "proto3";
// package name is used for both generated .sol file name and library name
package TransferData;

import "google/protobuf/descriptor.proto";
extend google.protobuf.FieldOptions {
    string soltype = 8888;  // must > 1001 and not conflict with other extensions
}

message Transfer {
    bytes channelID = 1 [ (soltype) = "bytes32" ];
    bytes balance = 2 [ (soltype) = "uint256" ];
    bytes nonce = 3 [ (soltype) = "uint256" ];
    bytes amount = 4 [ (soltype) = "uint256" ];
    bytes additionalHash = 5 [ (soltype) = "bytes32" ];
    bytes signature = 6; // [ (soltype) = "bytes" ];
}